test/test_wrong_argument_type_variable/test_wrong_argument_type_variable.mvs
let b = 0;
func a(c: float) {}
a(b);
